--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{ts, tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +44,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1"
   }
 }
