--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
