--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-ununsed-vars": "off",
+      "@typescript-eslint/no-unused-vars": ["error"]
+    }
   },
   "browserslist": {
     "production": [
